--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "joi": "^17.11.0",
     "method-override": "^3.0.0",
     "mongoos": "^0.0.1-security",
-    "mongoose": "^8.0.1"
+    "mongoose": "^8.0.1",
+    "passport": "^0.6.0",
+    "passport-local-mongoose": "^8.0.0"
   }
 }
