--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "method-override": "^3.0.0",
     "mongoos": "^0.0.1-security",
     "mongoose": "^8.0.1",
+    "multer": "^1.4.5-lts.1",
     "passport": "^0.6.0",
     "passport-local-mongoose": "^8.0.0"
   }
